--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/output.css" />
+    <link rel="stylesheet" href="./assets/css/output.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"
       rel="stylesheet"
@@ -38,11 +38,7 @@
               </svg>
             </button>
             <a href="./index.html" class="flex ms-2 md:me-24">
-              <img
-                src="./assets/img/logo.png"
-                class="h-8 me-3"
-                alt="FlowBite Logo"
-              />
+              <img src="./assets/img/logo.png" class="h-8 me-3" alt="Logo" />
             </a>
           </div>
           <div class="flex items-center">
@@ -125,7 +121,7 @@
         <ul class="space-y-2 font-medium">
           <li>
             <a
-              href="#"
+              href="./index.html"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -147,11 +143,11 @@
           </li>
           <li>
             <a
-              href="#"
+              href="./products"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
-                class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 group-hover:text-gray-900"
                 aria-hidden="true"
                 xmlns="http://www.w3.org/2000/svg"
                 fill="currentColor"
@@ -247,32 +243,34 @@
               <div
                 class="grid items-center grid-cols-1 gap-4 my-8 md:grid-cols-2 lg:grid-cols-3"
               >
-                <div
-                  class="bg-[#fcfcfc] shadow-[0px_2px_8px_rgba(0,0,0,0.12)] rounded-[10px] py-4 px-3 flex justify-between items-center"
-                >
-                  <div class="flex items-center gap-6">
-                    <div>
-                      <svg
-                        class="flex-shrink-0 w-10 h-10 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
-                        aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="currentColor"
-                        viewBox="0 0 18 20"
-                      >
-                        <path
-                          d="M17 5.923A1 1 0 0 0 16 5h-3V4a4 4 0 1 0-8 0v1H2a1 1 0 0 0-1 .923L.086 17.846A2 2 0 0 0 2.08 20h13.84a2 2 0 0 0 1.994-2.153L17 5.923ZM7 9a1 1 0 0 1-2 0V7h2v2Zm0-5a2 2 0 1 1 4 0v1H7V4Zm6 5a1 1 0 1 1-2 0V7h2v2Z"
-                        />
-                      </svg>
+                <a href="./products/">
+                  <div
+                    class="bg-[#fcfcfc] shadow-[0px_2px_8px_rgba(0,0,0,0.12)] rounded-[10px] py-4 px-3 flex justify-between items-center"
+                  >
+                    <div class="flex items-center gap-6">
+                      <div>
+                        <svg
+                          class="flex-shrink-0 w-10 h-10 text-gray-500 transition duration-75 group-hover:text-gray-900"
+                          aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="currentColor"
+                          viewBox="0 0 18 20"
+                        >
+                          <path
+                            d="M17 5.923A1 1 0 0 0 16 5h-3V4a4 4 0 1 0-8 0v1H2a1 1 0 0 0-1 .923L.086 17.846A2 2 0 0 0 2.08 20h13.84a2 2 0 0 0 1.994-2.153L17 5.923ZM7 9a1 1 0 0 1-2 0V7h2v2Zm0-5a2 2 0 1 1 4 0v1H7V4Zm6 5a1 1 0 1 1-2 0V7h2v2Z"
+                          />
+                        </svg>
+                      </div>
+                      <div>
+                        <h3 class="text-[32px] font-semibold">32</h3>
+                        <p class="font-semibold text-[#6f767e]">Products</p>
+                      </div>
                     </div>
                     <div>
-                      <h3 class="text-[32px] font-semibold">32</h3>
-                      <p class="font-semibold text-[#6f767e]">Products</p>
+                      <img src="./assets/img/right-arrow.png" alt="arrow" />
                     </div>
                   </div>
-                  <div>
-                    <img src="./assets/img/right-arrow.png" alt="arrow" />
-                  </div>
-                </div>
+                </a>
                 <div
                   class="bg-[#fcfcfc] shadow-[0px_2px_8px_rgba(0,0,0,0.12)] rounded-[10px] py-4 px-3 flex justify-between items-center"
                 >
