added orders user account page

--- a/public/accounts/index.html
+++ b/public/accounts/index.html
@@ -127,7 +127,7 @@
           </li>
           <li>
             <a
-              href="./"
+              href="../products"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -146,7 +146,7 @@
           </li>
           <li>
             <a
-              href="../orders/"
+              href="../orders"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -165,7 +165,7 @@
           </li>
           <li>
             <a
-              href="../users/"
+              href="../users"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -184,7 +184,7 @@
           </li>
           <li>
             <a
-              href="../accounts/"
+              href="./"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -210,7 +210,7 @@
       <div class="mt-20">
         <main class="bg-[#f4f4f4] w-full h-full px-8 py-6">
           <div class="flex flex-col gap-4">
-            <h1 class="my-8 text-5xl font-semibold">Products</h1>
+            <h1 class="my-8 text-5xl font-semibold">Accounts</h1>
             <section class="bg-[#fcfcfc] rounded-lg px-0 py-8">
               <div
                 class="flex flex-col items-center justify-between px-4 space-y-3 md:flex-row"
@@ -221,10 +221,10 @@
                     id="stats-span"
                     class="box-border bg-[#fcfcfc] text-[#6f767e] text-[13px] font-semibold leading-[17px] px-6 py-2 rounded-lg border-2 border-solid border-[#efefef]"
                   >
-                    <option value="all">All Products</option>
-                    <option value="men">Men</option>
-                    <option value="women">Women</option>
-                    <option value="kid">Kids</option>
+                    <option value="all">All Accounts</option>
+                    <option value="admin">Admin</option>
+                    <option value="editor">Editor</option>
+                    <option value="viewer">Viewer</option>
                   </select>
                   <div class="flex items-center gap-3">
                     <input
@@ -260,7 +260,7 @@
                     data-modal-toggle="default-modal"
                     class="box-border px-4 py-2 text-sm font-semibold leading-4 text-white bg-blue-700 rounded-lg cursor-pointer hover:bg-blue-800"
                   >
-                    Add Product
+                    Add Account
                   </button>
                 </div>
               </div>
@@ -275,31 +275,25 @@
                               scope="col"
                               class="px-6 py-3 text-start text-[#6f767e] text-xs font-bold"
                             >
-                              Product
+                              Name
                             </th>
                             <th
                               scope="col"
                               class="px-6 py-3 text-start text-[#6f767e] text-xs font-bold"
                             >
-                              Price
+                              Email
                             </th>
                             <th
                               scope="col"
                               class="px-6 py-3 text-start text-[#6f767e] text-xs font-bold"
                             >
-                              In Stock
+                              Password
                             </th>
                             <th
                               scope="col"
                               class="px-6 py-3 text-start text-[#6f767e] text-xs font-bold"
                             >
-                              Category
-                            </th>
-                            <th
-                              scope="col"
-                              class="px-6 py-3 text-start text-[#6f767e] text-xs font-bold"
-                            >
-                              Date
+                              Role
                             </th>
                             <th
                               scope="col"
@@ -315,17 +309,16 @@
                               <div class="flex items-center gap-2">
                                 <div>
                                   <img
-                                    width="63"
-                                    height="80"
-                                    src="../assets/img/product-img.png"
-                                    alt="product"
+                                    class="w-8 h-8 rounded-full"
+                                    src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
+                                    alt="user photo"
                                   />
                                 </div>
                                 <div class="flex flex-col">
                                   <p
                                     class="text-[#1a1d1f] text-[15px] font-bold"
                                   >
-                                    Product - 3600
+                                    Neil Sims
                                   </p>
                                 </div>
                               </div>
@@ -333,22 +326,17 @@
                             <td
                               class="px-6 py-4 text-[#212529] text-[15px] font-bold"
                             >
-                              $ 2188,46
+                              neil.sims@flowbite.com
                             </td>
                             <td
                               class="px-6 py-4 text-[#1a1d1f] text-[15px] font-bold"
                             >
-                              4
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#1a1d1f] text-[15px] font-bold"
-                            >
-                              Men
+                              12345
                             </td>
                             <td
                               class="px-6 py-4 text-[#212529] text-[15px] font-bold"
                             >
-                              14/09/2021
+                              Admin
                             </td>
                             <td class="px-6 py-4">
                               <div class="flex gap-2">
@@ -378,17 +366,16 @@
                               <div class="flex items-center gap-2">
                                 <div>
                                   <img
-                                    width="63"
-                                    height="80"
-                                    src="../assets/img/product-img.png"
-                                    alt="product"
+                                    class="w-8 h-8 rounded-full"
+                                    src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
+                                    alt="user photo"
                                   />
                                 </div>
                                 <div class="flex flex-col">
                                   <p
                                     class="text-[#1a1d1f] text-[15px] font-bold"
                                   >
-                                    Product - 3600
+                                    Neil Sims
                                   </p>
                                 </div>
                               </div>
@@ -396,22 +383,17 @@
                             <td
                               class="px-6 py-4 text-[#212529] text-[15px] font-bold"
                             >
-                              $ 2188,46
+                              neil.sims@flowbite.com
                             </td>
                             <td
                               class="px-6 py-4 text-[#1a1d1f] text-[15px] font-bold"
                             >
-                              4
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#1a1d1f] text-[15px] font-bold"
-                            >
-                              Women
+                              12345
                             </td>
                             <td
                               class="px-6 py-4 text-[#212529] text-[15px] font-bold"
                             >
-                              14/09/2021
+                              Admin
                             </td>
                             <td class="px-6 py-4">
                               <div class="flex gap-2">
@@ -496,84 +478,70 @@
         <!-- Modal body -->
         <form class="p-4 space-y-4 md:p-5">
           <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="email"
-              >Product Name</label
+            <label class="text-xs font-semibold leading-4" for="name"
+              >Name</label
             >
             <input
               style="background-color: #f4f4f4"
               type="text"
-              name="product-name"
-              id="product-name"
+              name="name"
+              id="name"
               class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Product Name"
+              placeholder="Enter Name"
             />
           </div>
           <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="description"
-              >Description</label
-            >
-            <textarea
-              style="background-color: #f4f4f4"
-              name="description"
-              id="description"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Description"
-            ></textarea>
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="price"
-              >Price</label
+            <label class="text-xs font-semibold leading-4" for="email"
+              >Email</label
             >
             <input
               style="background-color: #f4f4f4"
-              type="number"
-              name="price"
-              id="price"
+              type="email"
+              name="email"
+              id="email"
               class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Price"
+              placeholder="Enter Email"
             />
           </div>
 
           <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="stock-quantity"
-              >Stock Quantity</label
+            <label class="text-xs font-semibold leading-4" for="password"
+              >Password</label
             >
             <input
               style="background-color: #f4f4f4"
-              type="number"
-              name="stock-quantity"
-              id="stock-quantity"
+              type="password"
+              name="password"
+              id="password"
               class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Stock Quantity"
+              placeholder="Enter Password"
             />
           </div>
-
           <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="category"
-              >Category</label
+            <label class="text-xs font-semibold leading-4" for="role"
+              >Role</label
             >
             <select
               style="background-color: #f4f4f4"
-              name="category"
-              id="category"
+              name="role"
+              id="role"
               class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
             >
-              <option value="men">Men</option>
-              <option value="women">Women</option>
-              <option value="men">Kids</option>
+              <option value="admin">Admin</option>
+              <option value="editor">Editor</option>
+              <option value="viewr">Viewer</option>
             </select>
           </div>
 
           <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="image-url"
-              >Upload Image</label
+            <label class="text-xs font-semibold leading-4" for="profile-pic"
+              >Profile Pic</label
             >
             <input
               style="background-color: #f4f4f4"
               type="file"
-              name="image"
-              id="image"
+              name="profile-pic"
+              id="profile-pic"
               class="box-border w-full border-0 rounded-lg outline-none"
             />
           </div>
