--- a/public/index.html
+++ b/public/index.html
@@ -77,23 +77,7 @@
                       href="#"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                       role="menuitem"
-                      >Dashboard</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="#"
-                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
-                      role="menuitem"
-                      >Settings</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="#"
-                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
-                      role="menuitem"
-                      >Earnings</a
+                      >Role</a
                     >
                   </li>
                   <li>
@@ -121,7 +105,7 @@
         <ul class="space-y-2 font-medium">
           <li>
             <a
-              href="./index.html"
+              href="./"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -143,7 +127,7 @@
           </li>
           <li>
             <a
-              href="./products"
+              href="./products/"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -162,7 +146,7 @@
           </li>
           <li>
             <a
-              href="#"
+              href="./orders/"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -181,7 +165,7 @@
           </li>
           <li>
             <a
-              href="#"
+              href="./users/"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -200,7 +184,7 @@
           </li>
           <li>
             <a
-              href="#"
+              href="./accounts/"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -271,58 +255,67 @@
                     </div>
                   </div>
                 </a>
-                <div
-                  class="bg-[#fcfcfc] shadow-[0px_2px_8px_rgba(0,0,0,0.12)] rounded-[10px] py-4 px-3 flex justify-between items-center"
+                <a
+                  href="./orders/
+                "
                 >
-                  <div class="flex items-center gap-6">
-                    <div>
-                      <svg
-                        class="flex-shrink-0 w-10 h-10 text-gray-500 transition duration-75 group-hover:text-gray-900"
-                        aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="currentColor"
-                        viewBox="0 0 20 20"
-                      >
-                        <path
-                          d="m17.418 3.623-.018-.008a6.713 6.713 0 0 0-2.4-.569V2h1a1 1 0 1 0 0-2h-2a1 1 0 0 0-1 1v2H9.89A6.977 6.977 0 0 1 12 8v5h-2V8A5 5 0 1 0 0 8v6a1 1 0 0 0 1 1h8v4a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-4h6a1 1 0 0 0 1-1V8a5 5 0 0 0-2.582-4.377ZM6 12H4a1 1 0 0 1 0-2h2a1 1 0 0 1 0 2Z"
-                        />
-                      </svg>
+                  <div
+                    class="bg-[#fcfcfc] shadow-[0px_2px_8px_rgba(0,0,0,0.12)] rounded-[10px] py-4 px-3 flex justify-between items-center"
+                  >
+                    <div class="flex items-center gap-6">
+                      <div>
+                        <svg
+                          class="flex-shrink-0 w-10 h-10 text-gray-500 transition duration-75 group-hover:text-gray-900"
+                          aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="currentColor"
+                          viewBox="0 0 20 20"
+                        >
+                          <path
+                            d="m17.418 3.623-.018-.008a6.713 6.713 0 0 0-2.4-.569V2h1a1 1 0 1 0 0-2h-2a1 1 0 0 0-1 1v2H9.89A6.977 6.977 0 0 1 12 8v5h-2V8A5 5 0 1 0 0 8v6a1 1 0 0 0 1 1h8v4a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-4h6a1 1 0 0 0 1-1V8a5 5 0 0 0-2.582-4.377ZM6 12H4a1 1 0 0 1 0-2h2a1 1 0 0 1 0 2Z"
+                          />
+                        </svg>
+                      </div>
+                      <div>
+                        <h3 class="text-[32px] font-semibold">124</h3>
+                        <p class="font-semibold text-[#6f767e]">
+                          Pending Orders
+                        </p>
+                      </div>
                     </div>
                     <div>
-                      <h3 class="text-[32px] font-semibold">124</h3>
-                      <p class="font-semibold text-[#6f767e]">Pending Orders</p>
+                      <img src="./assets/img/right-arrow.png" alt="arrow" />
                     </div>
                   </div>
-                  <div>
-                    <img src="./assets/img/right-arrow.png" alt="arrow" />
-                  </div>
-                </div>
-                <div
-                  class="bg-[#fcfcfc] shadow-[0px_2px_8px_rgba(0,0,0,0.12)] rounded-[10px] py-4 px-3 flex justify-between items-center"
-                >
-                  <div class="flex items-center gap-6">
+                </a>
+                <a href="./users/">
+                  <div
+                    class="bg-[#fcfcfc] shadow-[0px_2px_8px_rgba(0,0,0,0.12)] rounded-[10px] py-4 px-3 flex justify-between items-center"
+                  >
+                    <div class="flex items-center gap-6">
+                      <div>
+                        <svg
+                          class="flex-shrink-0 w-10 h-10 text-gray-500 transition duration-75 group-hover:text-gray-900"
+                          aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="currentColor"
+                          viewBox="0 0 20 18"
+                        >
+                          <path
+                            d="M14 2a3.963 3.963 0 0 0-1.4.267 6.439 6.439 0 0 1-1.331 6.638A4 4 0 1 0 14 2Zm1 9h-1.264A6.957 6.957 0 0 1 15 15v2a2.97 2.97 0 0 1-.184 1H19a1 1 0 0 0 1-1v-1a5.006 5.006 0 0 0-5-5ZM6.5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9ZM8 10H5a5.006 5.006 0 0 0-5 5v2a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-2a5.006 5.006 0 0 0-5-5Z"
+                          />
+                        </svg>
+                      </div>
+                      <div>
+                        <h3 class="text-[32px] font-semibold">20</h3>
+                        <p class="font-semibold text-[#6f767e]">Users</p>
+                      </div>
+                    </div>
                     <div>
-                      <svg
-                        class="flex-shrink-0 w-10 h-10 text-gray-500 transition duration-75 group-hover:text-gray-900"
-                        aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="currentColor"
-                        viewBox="0 0 20 18"
-                      >
-                        <path
-                          d="M14 2a3.963 3.963 0 0 0-1.4.267 6.439 6.439 0 0 1-1.331 6.638A4 4 0 1 0 14 2Zm1 9h-1.264A6.957 6.957 0 0 1 15 15v2a2.97 2.97 0 0 1-.184 1H19a1 1 0 0 0 1-1v-1a5.006 5.006 0 0 0-5-5ZM6.5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9ZM8 10H5a5.006 5.006 0 0 0-5 5v2a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-2a5.006 5.006 0 0 0-5-5Z"
-                        />
-                      </svg>
-                    </div>
-                    <div>
-                      <h3 class="text-[32px] font-semibold">20</h3>
-                      <p class="font-semibold text-[#6f767e]">Users</p>
+                      <img src="./assets/img/right-arrow.png" alt="arrow" />
                     </div>
                   </div>
-                  <div>
-                    <img src="./assets/img/right-arrow.png" alt="arrow" />
-                  </div>
-                </div>
+                </a>
               </div>
             </section>
             <section
