added pen icon for edit and remove ordesr from dashboard

--- a/public/products/index.html
+++ b/public/products/index.html
@@ -366,6 +366,15 @@
                                 >
                                   <img
                                     width="36"
+                                    src="../assets/img/pen.png"
+                                    alt=""
+                                  />
+                                </button>
+                                <button
+                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
+                                >
+                                  <img
+                                    width="36"
                                     src="../assets/img/Icon-close.png"
                                     alt=""
                                   />
