--- a/public/accounts/index.html
+++ b/public/accounts/index.html
@@ -354,6 +354,15 @@
                                 >
                                   <img
                                     width="36"
+                                    src="../assets/img/pen.png"
+                                    alt=""
+                                  />
+                                </button>
+                                <button
+                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
+                                >
+                                  <img
+                                    width="36"
                                     src="../assets/img/Icon-close.png"
                                     alt=""
                                   />
@@ -403,6 +412,15 @@
                                   <img
                                     width="36"
                                     src="../assets/img/Icon-visibility.png"
+                                    alt=""
+                                  />
+                                </button>
+                                <button
+                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
+                                >
+                                  <img
+                                    width="36"
+                                    src="../assets/img/pen.png"
                                     alt=""
                                   />
                                 </button>
