--- a/public/accounts/edit-account/index.html
+++ b/public/accounts/edit-account/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="http://localhost:3000/assets/css/output.css" />
+    <link rel="stylesheet" href="/assets/css/output.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"
       rel="stylesheet"
     />
+
+    <script src="/assets/scripts/utils.js"></script>
+    <script src="/assets/scripts/utils.js"></script>
     <title>Ecommerce Dashboard</title>
   </head>
   <body>
@@ -37,12 +40,8 @@
                 ></path>
               </svg>
             </button>
-            <a href="http://localhost:3000/" class="flex ms-2 md:me-24">
-              <img
-                src="http://localhost:3000/assets/img/logo.png"
-                class="h-8 me-3"
-                alt="Logo"
-              />
+            <a href="/" class="flex ms-2 md:me-24">
+              <img src="/assets/img/logo.png" class="h-8 me-3" alt="Logo" />
             </a>
           </div>
           <div class="flex items-center">
@@ -67,8 +66,11 @@
                 id="dropdown-user"
               >
                 <div class="px-4 py-3" role="none">
-                  <p class="text-sm text-gray-900" role="none">Neil Sims</p>
+                  <p id="acc-name" class="text-sm text-gray-900" role="none">
+                    Neil Sims
+                  </p>
                   <p
+                    id="acc-email"
                     class="text-sm font-medium text-gray-900 truncate"
                     role="none"
                   >
@@ -78,6 +80,7 @@
                 <ul class="py-1" role="none">
                   <li>
                     <a
+                      id="acc-role"
                       href="#"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                       role="menuitem"
@@ -85,12 +88,14 @@
                     >
                   </li>
                   <li>
-                    <a
-                      href="#"
-                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                    <button
+                      type="button"
+                      onclick="logout()"
+                      class="w-full px-4 py-2 text-sm text-left text-gray-700 hover:bg-gray-100"
                       role="menuitem"
-                      >Sign out</a
                     >
+                      Sign out
+                    </button>
                   </li>
                 </ul>
               </div>
@@ -109,7 +114,7 @@
         <ul class="space-y-2 font-medium">
           <li>
             <a
-              href="http://localhost:3000/"
+              href="/"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -131,7 +136,7 @@
           </li>
           <li>
             <a
-              href="http://localhost:3000/products"
+              href="/products"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -150,7 +155,7 @@
           </li>
           <li>
             <a
-              href="http://localhost:3000/orders/"
+              href="/orders/"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -169,7 +174,7 @@
           </li>
           <li>
             <a
-              href="http://localhost:3000/users/"
+              href="/users/"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -188,7 +193,7 @@
           </li>
           <li>
             <a
-              href="http://localhost:3000/accounts/"
+              href="/accounts/"
               class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
             >
               <svg
@@ -285,21 +290,6 @@
                         <option value="viewr">Viewer</option>
                       </select>
                     </div>
-
-                    <div class="flex flex-col gap-2 my-6">
-                      <label
-                        class="text-xs font-semibold leading-4"
-                        for="profile-pic"
-                        >Profile Pic</label
-                      >
-                      <input
-                        style="background-color: #f4f4f4"
-                        type="file"
-                        name="profile-pic"
-                        id="profile-pic"
-                        class="box-border w-full border-0 rounded-lg outline-none"
-                      />
-                    </div>
                   </form>
                   <!-- Modal footer -->
                   <div
@@ -326,6 +316,7 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
+    <script src="/assets/scripts/postloadhtml.js"></script>
     <div
       id="default-modal"
       tabindex="-1"
