--- a/public/accounts/index.html
+++ b/public/accounts/index.html
@@ -8,6 +8,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"
       rel="stylesheet"
     />
+
+    <script src="/assets/scripts/utils.js"></script>
     <title>Ecommerce Dashboard</title>
   </head>
   <body>
@@ -63,8 +65,11 @@
                 id="dropdown-user"
               >
                 <div class="px-4 py-3" role="none">
-                  <p class="text-sm text-gray-900" role="none">Neil Sims</p>
+                  <p id="acc-name" class="text-sm text-gray-900" role="none">
+                    Neil Sims
+                  </p>
                   <p
+                    id="acc-email"
                     class="text-sm font-medium text-gray-900 truncate"
                     role="none"
                   >
@@ -81,12 +86,14 @@
                     >
                   </li>
                   <li>
-                    <a
-                      href="#"
-                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                    <button
+                      type="button"
+                      onclick="logout()"
+                      class="w-full px-4 py-2 text-sm text-left text-gray-700 hover:bg-gray-100"
                       role="menuitem"
-                      >Sign out</a
                     >
+                      Sign out
+                    </button>
                   </li>
                 </ul>
               </div>
@@ -256,11 +263,9 @@
                 </div>
                 <div>
                   <button
-                    data-modal-target="default-modal"
-                    data-modal-toggle="default-modal"
                     class="box-border px-4 py-2 text-sm font-semibold leading-4 text-white bg-blue-700 rounded-lg cursor-pointer hover:bg-blue-800"
                   >
-                    Add Account
+                    <a href="./add-account/"> Add Account </a>
                   </button>
                 </div>
               </div>
@@ -303,140 +308,7 @@
                             </th>
                           </tr>
                         </thead>
-                        <tbody>
-                          <tr class="odd:bg-[#efefef] even:bg-[#fcfcfc]">
-                            <td class="px-6 py-2">
-                              <div class="flex items-center gap-2">
-                                <div>
-                                  <img
-                                    class="w-8 h-8 rounded-full"
-                                    src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
-                                    alt="user photo"
-                                  />
-                                </div>
-                                <div class="flex flex-col">
-                                  <p
-                                    class="text-[#1a1d1f] text-[15px] font-bold"
-                                  >
-                                    Neil Sims
-                                  </p>
-                                </div>
-                              </div>
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#212529] text-[15px] font-bold"
-                            >
-                              neil.sims@flowbite.com
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#1a1d1f] text-[15px] font-bold"
-                            >
-                              12345
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#212529] text-[15px] font-bold"
-                            >
-                              Admin
-                            </td>
-                            <td class="px-6 py-4">
-                              <div class="flex gap-2">
-                                <button
-                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
-                                >
-                                  <img
-                                    width="36"
-                                    src="../assets/img/Icon-visibility.png"
-                                    alt=""
-                                  />
-                                </button>
-                                <button
-                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
-                                >
-                                  <img
-                                    width="36"
-                                    src="../assets/img/pen.png"
-                                    alt=""
-                                  />
-                                </button>
-                                <button
-                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
-                                >
-                                  <img
-                                    width="36"
-                                    src="../assets/img/Icon-close.png"
-                                    alt=""
-                                  />
-                                </button>
-                              </div>
-                            </td>
-                          </tr>
-                          <tr class="odd:bg-[#efefef] even:bg-[#fcfcfc]">
-                            <td class="px-6 py-2">
-                              <div class="flex items-center gap-2">
-                                <div>
-                                  <img
-                                    class="w-8 h-8 rounded-full"
-                                    src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
-                                    alt="user photo"
-                                  />
-                                </div>
-                                <div class="flex flex-col">
-                                  <p
-                                    class="text-[#1a1d1f] text-[15px] font-bold"
-                                  >
-                                    Neil Sims
-                                  </p>
-                                </div>
-                              </div>
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#212529] text-[15px] font-bold"
-                            >
-                              neil.sims@flowbite.com
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#1a1d1f] text-[15px] font-bold"
-                            >
-                              12345
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#212529] text-[15px] font-bold"
-                            >
-                              Admin
-                            </td>
-                            <td class="px-6 py-4">
-                              <div class="flex gap-2">
-                                <button
-                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
-                                >
-                                  <img
-                                    width="36"
-                                    src="../assets/img/Icon-visibility.png"
-                                    alt=""
-                                  />
-                                </button>
-                                <button
-                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
-                                >
-                                  <img
-                                    width="36"
-                                    src="../assets/img/pen.png"
-                                    alt=""
-                                  />
-                                </button>
-                                <button
-                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
-                                >
-                                  <img
-                                    width="36"
-                                    src="../assets/img/Icon-close.png"
-                                    alt=""
-                                  />
-                                </button>
-                              </div>
-                            </td>
-                          </tr>
-                        </tbody>
+                        <tbody id="account-table"></tbody>
                       </table>
                     </div>
                   </div>
@@ -456,127 +328,7 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
-    <div
-      id="default-modal"
-      tabindex="-1"
-      aria-hidden="true"
-      class="fixed top-0 left-0 right-0 z-50 items-center justify-center hidden w-full h-screen overflow-x-hidden overflow-y-auto"
-    >
-      <div
-        class="relative max-w-xl max-h-[400px] bg-white rounded-lg shadow w-[432px] overflow-y-scroll no-scrollbar"
-      >
-        <!-- Modal header -->
-        <div
-          class="flex items-center justify-between p-4 border-b rounded-t md:p-5"
-        >
-          <h3 class="text-xl font-semibold text-gray-900">Add New Product</h3>
-          <button
-            type="button"
-            class="inline-flex items-center justify-center w-8 h-8 text-sm text-gray-400 bg-transparent rounded-lg hover:bg-gray-200 hover:text-gray-900 ms-auto"
-            data-modal-hide="default-modal"
-          >
-            <svg
-              class="w-3 h-3"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 14 14"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-              />
-            </svg>
-            <span class="sr-only">Close modal</span>
-          </button>
-        </div>
-        <!-- Modal body -->
-        <form class="p-4 space-y-4 md:p-5">
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="name"
-              >Name</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="text"
-              name="name"
-              id="name"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Name"
-            />
-          </div>
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="email"
-              >Email</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="email"
-              name="email"
-              id="email"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Email"
-            />
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="password"
-              >Password</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="password"
-              name="password"
-              id="password"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Password"
-            />
-          </div>
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="role"
-              >Role</label
-            >
-            <select
-              style="background-color: #f4f4f4"
-              name="role"
-              id="role"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-            >
-              <option value="admin">Admin</option>
-              <option value="editor">Editor</option>
-              <option value="viewr">Viewer</option>
-            </select>
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="profile-pic"
-              >Profile Pic</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="file"
-              name="profile-pic"
-              id="profile-pic"
-              class="box-border w-full border-0 rounded-lg outline-none"
-            />
-          </div>
-        </form>
-        <!-- Modal footer -->
-        <div
-          class="flex items-center p-4 border-t border-gray-200 rounded-b md:p-5"
-        >
-          <button
-            data-modal-hide="default-modal"
-            type="button"
-            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-          >
-            Add
-          </button>
-        </div>
-      </div>
-    </div>
+    <script src="/assets/scripts/postloadhtml.js"></script>
+    <script src="../assets/scripts/accounts.js"></script>
   </body>
 </html>
