--- a/public/orders/index.html
+++ b/public/orders/index.html
@@ -8,6 +8,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"
       rel="stylesheet"
     />
+
+    <script src="/assets/scripts/utils.js"></script>
     <title>Ecommerce Dashboard</title>
   </head>
   <body>
@@ -63,8 +65,11 @@
                 id="dropdown-user"
               >
                 <div class="px-4 py-3" role="none">
-                  <p class="text-sm text-gray-900" role="none">Neil Sims</p>
+                  <p id="acc-name" class="text-sm text-gray-900" role="none">
+                    Neil Sims
+                  </p>
                   <p
+                    id="acc-email"
                     class="text-sm font-medium text-gray-900 truncate"
                     role="none"
                   >
@@ -74,6 +79,7 @@
                 <ul class="py-1" role="none">
                   <li>
                     <a
+                      id="acc-role"
                       href="#"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                       role="menuitem"
@@ -81,12 +87,14 @@
                     >
                   </li>
                   <li>
-                    <a
-                      href="#"
-                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                    <button
+                      type="button"
+                      onclick="logout()"
+                      class="w-full px-4 py-2 text-sm text-left text-gray-700 hover:bg-gray-100"
                       role="menuitem"
-                      >Sign out</a
                     >
+                      Sign out
+                    </button>
                   </li>
                 </ul>
               </div>
@@ -430,5 +438,6 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
+    <script src="/assets/scripts/postloadhtml.js"></script>
   </body>
 </html>
